# AVTransControl

./: README.md
AVTCClient/VideoPlayer/: .qmake.stash  VideoPlayer.pro  VideoPlayer.pro.user.43d7e26  VideoPlayer.pro.user.ab5a87c  infoform.h  infoform.ui  loginForm.ui  loginform.cpp  loginform.h  main.cpp  mediabase.h  mediamp4.cpp  mediamp4.h  messageform.cpp  messageform.h  messageform.ui  qmediaplayer.cpp  qmediaplayer.h  qscreentop.h  qstatuscheck.cpp  qstatuscheck.h  recordfile.cpp  recordfile.h  ssltool.cpp  ssltool.h  ui.qrc  vlchelper.cpp  vlchelper.h  widget.cpp  widget.h  widget.ui
AVTCClient/build-VideoPlayer-Desktop_Qt_5_12_9_MSVC2017_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  VideoPlayer_resource.rc  ui_infoform.h  ui_loginForm.h  ui_messageform.h  ui_widget.h
AVTCServer/: CMakeLists.txt
AVTCServer/include/DB/: DatabaseHelper.h  MysqlClient.h  Sqlite3Client.h  sqlite3ext.h
AVTCServer/include/Server/: CServer.h  EdoyunPlayerServer.h
AVTCServer/include/Socket/: Epoll.h  Socket.h
AVTCServer/include/encrypt/: Crypto.h
AVTCServer/include/http/: HttpParser.h  http_parser.h
AVTCServer/include/logger/: Logger.h
AVTCServer/include/process/: process.h
AVTCServer/include/public/: Buffer.h  README.md  function.h  json.h
AVTCServer/include/thread/: Thread.h  threadpool.h
AVTCServer/src/: main.cpp
AVTCServer/src/DB/: DatabaseHelper.cpp  MysqlClient.cpp  Sqlite3Client.cpp
AVTCServer/src/Server/: CServer.cpp  EdoyunPlayerServer.cpp
AVTCServer/src/Socket/: Epoll.cpp  Socket.cpp
AVTCServer/src/encrypt/: Crypto.cpp
AVTCServer/src/http/: HttpParser.cpp  http_parser.c
AVTCServer/src/logger/: Logger.cpp
AVTCServer/src/process/: process.cpp
AVTCServer/src/thread/: Thread.cpp  threadpool.cpp
(+25 files in other folders)
